--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ if ( !isemail(frm["fldEmail"].value) ) {
 	    <br />Будьте сильными и выносливыми.</h2>
 		<h2>Подпишитесь и занимайтесь вместе с нами!</h2>
 		<p class="whitetext">Вы получите базовую программу тренировок. Это бесплатно.</p>
-		<form action="#" method=post name="frmLB359981" accept-charset="UTF-8" onsubmit="#" >
+		<form action="" method=post name="frmLB359981" accept-charset="UTF-8" onsubmit="" >
       <!--
 		<input type=hidden name=successurl value="http://freeletics.ru/sub-act-ok.html" />
 		<input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
