--- a/index.html
+++ b/index.html
@@ -554,22 +554,7 @@
 
 
 <!-- INTERSECTION CONTACT _____________________________________________________________________________________ -->
-<!--
-<script type="text/javascript">
-function CheckField359981(fldName, frm){ if ( frm[fldName].length ) { for ( var i = 0, l = frm[fldName].length; i < l; i++ ) {  if ( frm[fldName].type =='select-one' ) { if( frm[fldName][i].selected && i==0 && frm[fldName][i].value == '' ) { return false; }  if ( frm[fldName][i].selected ) { return true; } }  else { if ( frm[fldName][i].checked ) { return true; } }; } return false; } else { if ( frm[fldName].type == "checkbox" ) { return ( frm[fldName].checked ); } else if ( frm[fldName].type == "radio" ) { return ( frm[fldName].checked ); } else { frm[fldName].focus(); return (frm[fldName].value.length > 0); }} }
-function rmspaces(x) {var leftx = 0;var rightx = x.length -1;while ( x.charAt(leftx) == ' ') { leftx++; }while ( x.charAt(rightx) == ' ') { --rightx; }var q = x.substr(leftx,rightx-leftx + 1);if ( (leftx == x.length) && (rightx == -1) ) { q =''; } return(q); }
-function checkfield(data) {if (rmspaces(data) == ""){return false;}else {return true;}}
-function isemail(data) {var flag = false;if (  data.indexOf("@",0)  == -1 || data.indexOf("\\",0)  != -1 ||data.indexOf("/",0)  != -1 ||!checkfield(data) ||  data.indexOf(".",0)  == -1  ||  data.indexOf("@")  == 0 ||data.lastIndexOf(".") < data.lastIndexOf("@") ||data.lastIndexOf(".") == (data.length - 1)   ||data.lastIndexOf("@") !=   data.indexOf("@") ||data.indexOf(",",0)  != -1 ||data.indexOf(":",0)  != -1 ||data.indexOf(";",0)  != -1  ) {return flag;} else {var temp = rmspaces(data);if (temp.indexOf(' ',0) != -1) { flag = true; }var d3 = temp.lastIndexOf('.') + 4;var d4 = temp.substring(0,d3);var e2 = temp.length  -  temp.lastIndexOf('.')  - 1;var i1 = temp.indexOf('@');if (  (temp.charAt(i1+1) == '.') || ( e2 < 1 ) ) { flag = true; }return !flag;}}
-function CheckFieldD359981(fldH, chkDD, chkMM, chkYY, reqd, frm){ var retVal = true; var dt = validDate359981(chkDD, chkMM, chkYY, frm); var nDate = frm[chkDD].value  + " " + frm[chkMM].value + " " + frm[chkYY].value; if ( dt == null && reqd == 1 ) {	nDate = ""; retVal = false;	} else if ( (frm[chkDD].value != "" || frm[chkMM].value != "" || frm[chkYY].value != "") && dt == null) { retVal = false; nDate = "";} if ( retVal ) {frm[fldH].value = nDate;} return retVal; }
-function validDate359981(chkDD, chkMM, chkYY, frm) {var objDate = null;	if ( frm[chkDD].value != "" && frm[chkMM].value != "" && frm[chkYY].value != "" ) {var mSeconds = (new Date(frm[chkYY].value - 0, frm[chkMM].selectedIndex - 1, frm[chkDD].value - 0)).getTime();var objDate = new Date();objDate.setTime(mSeconds);if (objDate.getFullYear() != frm[chkYY].value - 0 || objDate.getMonth()  != frm[chkMM].selectedIndex - 1  || objDate.getDate() != frm[chkDD].value - 0){objDate = null;}}return objDate;}
-function _checkSubmit359981(frm){
-if ( !isemail(frm["fldEmail"].value) ) {
-   alert("Пожалуйста, введите e-mail");
-   return false;
-}
- return true; }
-</script>
--->
+
 
 <section id="subscribe">
 
@@ -581,7 +566,8 @@ if ( !isemail(frm["fldEmail"].value) ) {
 	    <br />Будьте сильными и выносливыми.</h2>
 		<h2>Подпишитесь и занимайтесь вместе с нами!</h2>
 		<p class="whitetext">Вы получите базовую программу тренировок. Это бесплатно.</p>
-		<form action="" method=post name="frmLB359981" accept-charset="UTF-8" onsubmit="" >
+		<!-- <form action="" method=post name="frmLB359981" accept-charset="UTF-8" onsubmit="" > -->
+		<form action="" > 
       <!--
 		<input type=hidden name=successurl value="http://freeletics.ru/sub-act-ok.html" />
 		<input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
@@ -591,7 +577,7 @@ if ( !isemail(frm["fldEmail"].value) ) {
 		<div>
             <h2><input type=text placeholder="ваше имя" name=fldfirstname maxlength=100 /></h2>
 			<h2><input type=text placeholder="ваш e-mail" name=fldEmail maxlength=100 /></h2>
-			<input type="submit" class="submit" value="Начать тренировки!"  krydebug="1751" class="submit" />
+			<input type="reset" class="submit" value="Начать тренировки!" />
 		</div>
 
 		</form>
